Show a grouped table of refunds on actuals page
This repeats the grouped table pattern we have for
transactions, but for refunds. I've made a couple of
tweaks to the transactions partial to make sure things
like IDs and classes are unique.

--- a/config/locales/models/refund.en.yml
+++ b/config/locales/models/refund.en.yml
@@ -26,6 +26,9 @@ en:
       refund:
         financial_quarter_and_year: The financial quarter the refund applies to
   table:
+    caption:
+      refund:
+        in_report: Refunds added in this report
     header:
       refund:
         financial_quarter: Financial quarter
