Current reports are listed on DP homepage
List the current reports on the delivery partners’ homepage, to give them immediate access to one of the most important elements of RODA.

--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -44,6 +44,7 @@ en:
   page_content:
     reports:
       title: Reports
+      approved_reports_link: View approved reports
     tab_content:
       forecasts:
         heading: Forecasts in this report
