Rename “historic” tab to “approved”

--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -10,7 +10,6 @@ en:
         awaiting_changes: Reports awaiting changes
         approved: Approved reports
         current: Current reports
-        historic: Historic reports
     header:
       report:
         financial_quarter: Financial quarter
@@ -41,8 +40,7 @@ en:
       variance: Variance
       budgets: Budgets
       current: Current
-      historic: Historic
-
+      approved: Approved
   page_content:
     reports:
       title: Reports
