--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -357,7 +357,7 @@ en:
       recipient_country:
         default_selection_value: Select a recipient country
       third_party_projects: Third-party projects (level D)
-      transactions: Transactions
+      actuals: Actual spend
       refunds: Refunds
     tab_content:
       change_history:
