--- a/config/locales/models/transaction.en.yml
+++ b/config/locales/models/transaction.en.yml
@@ -1,13 +1,13 @@
 ---
 en:
   action:
-    transaction:
+    actual:
       create:
-        success: Transaction successfully created
+        success: Actual successfully created
       update:
-        success: Transaction sucessfully updated
+        success: Actual sucessfully updated
       destroy:
-        success: Transaction sucessfully deleted
+        success: Actual sucessfully deleted
       download:
         button: Download CSV template
         hint_html: "<p class='govuk-body'>This CSV contains activity data related to your current report.</p><p class='govuk-body'>Edit it to add the actual spend amounts for your organisation's activities, then upload it through the form.</p>"
@@ -18,11 +18,11 @@ en:
         success: The transactions were successfully imported.
   form:
     label:
-      transaction:
+      actual:
         csv_file: Provide actuals data to upload
         csv_file_recover_from_error: Re-upload CSV spreadsheet
         currency: Currency
-        description: Describe the transaction
+        description: Describe the actual
         disbursement_channel: Disbursement channel (optional)
         providing_organisation_reference: International Aid Transparency Initiative (IATI) Reference (optional)
         receiving_organisation_reference: IATI Reference (optional)
@@ -31,34 +31,34 @@ en:
         providing_organisation_type: Providing organisation type
         receiving_organisation_name: Receiving organisation name
         receiving_organisation_type: Receiving organisation type
-        value: Transaction amount
+        value: Actual amount
     legend:
-      transaction:
-        date: Date of transaction
+      actual:
+        date: Date of actual spend
         providing_organisation: Providing organisation
         receiving_organisation: Receiving organisation (optional)
     hint:
-      transaction:
+      actual:
         csv_file: Select the file that contains the actuals data for this report.
         csv_file_recover_from_error_html: Upload a spreadsheet containing transaction information in CSV format. We recommend <a href="%{link}" class="govuk-link">downloading this CSV template</a>.
         date: If you're reporting quarterly data, select the last day of the quarter. For example, 31 12 2020
         description: For example, 2020 quarter one spend on the Early Career Research Network project.
-        disbursement_channel: The channel through which the funds will flow for this transaction.
-        providing_organisation: The organisation where this transaction is coming from.
+        disbursement_channel: The channel through which the funds will flow for this actual.
+        providing_organisation: The organisation where this actual is coming from.
         providing_organisation_reference_html: For example, GB-GOV-13. To lookup codes or for more infomation see <a href="http://org-id.guide/" target="_blank" class="govuk-link">the organisation finder service (Opens in new window)</a>.
-        receiving_organisation: The organisation receiving the money from this transaction.
+        receiving_organisation: The organisation receiving the money from this actual.
         receiving_organisation_reference_html: For example, GB-COH-12345. To lookup codes or for more infomation see <a href="http://org-id.guide/" target="_blank" class="govuk-link">the organisation finder service (Opens in new window)</a>.
   table:
     caption:
-      transaction:
+      actual:
         actuals_in_report: Actuals added to this report
     header:
-      transaction:
+      actual:
         financial_quarter: Financial quarter
-        value: Transaction amount
+        value: Actual amount
         receiving_organisation: Receiver
   tabs:
-    transactions:
+    actuals:
       heading: Actuals
       copy: Listed below are the actuals that have been added to this report.
       providing:
@@ -71,7 +71,7 @@ en:
           <p class="govuk-body">For guidance on uploading actuals data, see the <a class="govuk-link" target="_blank" rel="noreferrer noopener" href="https://beisodahelp.zendesk.com/hc/en-gb/articles/1500005601882-Downloading-the-Actuals-Template-in-order-to-Bulk-Upload">guidance in the help centre (opens in new tab)</a>.</p>
         warning: Ensure you use the correct template (available below) when uploading actuals data.
   page_content:
-    transactions:
+    actuals:
       button:
         create: Add a transaction
         upload: Upload actuals data
@@ -93,34 +93,34 @@ en:
           </ol>
           <p class="govuk-body">For more detailed guidance on uploading actuals data, see the <a class="govuk-link" target="_blank" rel="noreferrer noopener" href="https://beisodahelp.zendesk.com/hc/en-gb/articles/1500005601882-Downloading-the-Actuals-Template-in-order-to-Bulk-Upload">guidance in the help centre (opens in new tab)</a></p>
   page_title:
-    transaction:
-      edit: Edit transaction
-      new: Add a transaction
+    actual:
+      edit: Edit actual
+      new: Add an actual
       upload: Upload actuals data
       upload_success: Successful uploads
   breadcrumb:
-    transaction:
-      edit: Edit transaction
-      new: Add a transaction
+    actual:
+      edit: Edit actual
+      new: Add an actual
       upload: Upload actuals data
       upload_success: Successful uploads
   activerecord:
     errors:
       models:
-        transaction:
+        actual:
           attributes:
             date:
               between: Date must be between %{min} years ago and %{max} years in the future
               not_in_future: Date must not be in the future
-              blank: Enter a date the transaction was made
+              blank: Enter a date the actual was made
             financial_quarter:
               inclusion: Enter a financial quarter between 1 and 4
             financial_year:
-              blank: Enter a financial year the transaction was made
+              blank: Enter a financial year the actual was made
             value:
               less_than_or_equal_to: Value must be less than or equal to 99,999,999,999.00
               other_than: Value must not be zero
-              blank: Enter a transaction amount
+              blank: Enter an actual amount
               not_a_number: Value must be a valid number
             transaction_type:
               blank: Select a transaction type
@@ -132,7 +132,7 @@ en:
               blank: Select the organisation type
   importer:
     errors:
-      transaction:
+      actual:
         invalid_date: Date must be a valid date
         invalid_iati_disbursement_channel: The disbursement channel must be a valid IATI Disbursement Channel code
         invalid_iati_organisation_type: The receiving organisation type must be a valid IATI Organisation Type code
@@ -141,5 +141,5 @@ en:
         unknown_identifier: Identifier is not recognised
         invalid_characters: This cell contains invalid characters
     success:
-      transaction:
+      actual:
         back_link: Back to report
