Extract Refund#comment to new FlexibleComment entity

--- a/config/locales/models/refund.en.yml
+++ b/config/locales/models/refund.en.yml
@@ -43,6 +43,8 @@ en:
       models:
         refund:
           attributes:
+            comment:
+              invalid: Enter a comment describing the need for the refund
             financial_year:
               blank: Select a financial year
             financial_quarter:
