Refund amount is always stored as a negative value
Calculation of total Actual, incl refund and
positive adjustment:
---

```
Actual      £30,000
Refund     -£10,000
Adjustment   £5,000
-------------------
TOTAL       £25,000

```

Calculation of total Actual, incl refund and
negative adjustment:
---

```
Actual      £30,000
Refund     -£10,000
Adjustment  -£5,000
-------------------
TOTAL       £15,000

```

In all cases we sum the transactions.

This is the default approach. If we need to breakout refunds
separately and exclude them from a presentation of "total
actual", we can do this using the scopes we have on `Transaction`
through our STI classes e.g. as:

```
Actual.total + Adjustment.total
```

--- a/config/locales/models/refund.en.yml
+++ b/config/locales/models/refund.en.yml
@@ -30,6 +30,7 @@ en:
       refund:
         financial_quarter_and_year: The financial quarter the refund applies to
         comment: The reason for posting the refund
+        value: Your refund is stored as a negative amount
   table:
     caption:
       refund:
