Show activity summary on all activity tabs
Show the activity summary for all activities except funds. (Most of the fields don’t make sense for fund-level activities.)

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -255,6 +255,7 @@ en:
         gdi: GDI
         geography: Benefitting recipient geography
         delivery_partner_identifier: Delivery partner identifier
+        delivery_partner_organisation: Delivery partner organisation
         intended_beneficiaries: Intended beneficiaries
         objectives: Aims/Objectives
         oda_eligibility: ODA eligibility
