BEIS users can export Spending breakdown
Here we allow BEIS users to download spending breakdown for all
organisation in a single file.

--- a/config/locales/views/exports.en.yml
+++ b/config/locales/views/exports.en.yml
@@ -26,9 +26,12 @@ en:
         name: External income for %{fund}
       budgets:
         name: Budgets for %{fund}
+      spending_breakdown:
+        name: Spending breakdown for %{fund}
       subheading:
         external_income: External income
         budgets: Budgets
+        spending_breakdown: Spending breakdown
         iati: IATI Exports
   breadcrumbs:
     export:
