Show all geography related fields
The whole area of 'geography' has undergone significant changes.

We want to try and help users and not confuse them with all the changes
that have been happening.

Users cannot modify the legacy values, but whilst the data is
migrated to the new format it is helpful to clearly show the old values
for comparison with the new in order to validate the new values.

Here we show all the field regardless of whether they have a value or not.

We add a 'Legacy field: not editable' label to show users they cannot change the values.

We also remove the `requires additional benefitting countries` attribute
as it no longer serves any purpose.

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -256,7 +256,7 @@ en:
         geography: Benefitting recipient geography
         delivery_partner_identifier: Delivery partner identifier
         delivery_partner_organisation: Delivery partner organisation
-        intended_beneficiaries: Intended beneficiaries
+        intended_beneficiaries_html: 'Intended beneficiaries</br><span class="govuk-body-s">Legacy field: not editable</span>'
         objectives: Aims/Objectives
         oda_eligibility: ODA eligibility
         oda_eligibility_lead: ODA eligibility lead
@@ -277,9 +277,9 @@ en:
         policy_marker_nutrition: Nutrition Policy
         programme_status: Activity status
         projects: Projects (level C)
-        recipient_country: Recipient country
-        recipient_region: Recipient region
         requires_additional_benefitting_countries: Other benefitting countries?
+        recipient_country_html: 'Recipient country</br><span class="govuk-body-s">Legacy field: not editable</span>'
+        recipient_region_html: 'Recipient region</br><span class="govuk-body-s">Legacy field: not editable</span>'
         sustainable_development_goals: Sustainable Development Goals
         sector: Economic/societal area
         sector_category: Focus area category
