Variance table copes with multiple comments
Now that there can be any number of comments per activity per report, it doesn’t make sense to make comment editing available from the Variance tab.

Instead, if there is at least one comment, the link sends users to the activity’s comments tab.

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -305,7 +305,7 @@ en:
         actual_spend: Actual spend
         forecasted_spend: Forecasted spend
         variance: Variance
-        comment: Comment
+        comments: Comments
         programme_status: Status
         total_variance: Total variance
     body:
