--- a/config/locales/models/comment.en.yml
+++ b/config/locales/models/comment.en.yml
@@ -19,6 +19,15 @@ en:
       edit: Edit comment
       edit_about_activity: Edit comment about %{activity}
       index_html: "This tab shows all the comments for this activity.<br>New comments can only be added whilst there is an active report."
+    tab_content:
+      comments:
+        heading: Comments
+  table:
+    header:
+      comments:
+        activity_roda_identifier: Activity RODA Identifier
+        date: Date
+        comment: Comment
   action:
     comment:
       create:
