Refactor report tabs locales
We want to store both a tab heading and any body copy in the locales,
rather than having the body in the view.

Here we prepare for this by allowing the tabs to have a 'heading'

--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -33,15 +33,24 @@ en:
         comment: Comment
   tabs:
     report:
-      summary: Summary
-      activities: Activities
-      forecasts: Forecasts
-      actuals: Actuals
-      variance: Variance
-      budgets: Budgets
-      current: Current
-      approved: Approved
-      comments: Comments
+      summary:
+        heading: Summary
+      activities:
+        heading: Activities
+      forecasts:
+        heading: Forecasts
+      actuals:
+        heading: Actuals
+      variance:
+        heading: Variance
+      budgets:
+        heading: Budgets
+      current:
+        heading: Current
+      approved:
+        heading: Approved
+      comments:
+        heading: Comments
   page_content:
     reports:
       title: Reports
