Add body copy to report variance tab
In the last commit we allowed the locales to store the body copy for a
tab, here we use that to store the variance tab copy and to update it to
be explicit that the values include adjustments.

--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -43,6 +43,7 @@ en:
         heading: Actuals
       variance:
         heading: Variance
+        body: This tab shows the variance between forecasted and actual spend, including any adjustments, in this reporting cycle.
       budgets:
         heading: Budgets
       current:
