--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -437,8 +437,71 @@ en:
     attributes:
       activity:
         roda_identifier: RODA identifier
-        sector: Focus area
-        sector_category: Focus area category
+        transparency_identifier: IATI identifier
+        beis_identifier: Original BEIS tracker identifier
+        level: Activity level
+        delivery_partner_identifier: Delivery Partner Identifier
+        recipient_region: Recipient region
+        recipient_country: Recipient country
+        intended_beneficiaries: Intended beneficiaries
+        benefitting_countries: Intended beneficiaries
+        benefitting_region: Recipient region
+        gdi: Global Development Impact
+        gcrf_strategic_area: GCRF Strategic Area
+        gcrf_challenge_area: GCRF Challenge Area
+        fund_pillar: Newton Fund Pillar
+        sdgs_apply: Sustainable development goals apply?
+        sdg_1: Sustainable Development Goal 1
+        sdg_2: Sustainable Development Goal 2
+        sdg_3: Sustainable Development Goal 3
+        title: Activity title
+        description: Activity title
+        objectives: Aims or objectives
+        oda_eligibility: ODA eligibility
+        oda_eligibility_lead: ODA eligibility lead contact name
+        covid19_related: Covid-19 related research
+        programme_status: Activity status
+        country_delivery_partners: Newton Fund Country Delivery Partners
+        uk_dp_named_contact: Activity contact name
+        call_open_date: Call open date
+        call_close_date: Call close date
+        planned_start_date: Planned start date
+        actual_start_date: Actual start date
+        planned_end_date: Planned end date
+        actual_end_date: Actual end date
+        total_applications: Total applications
+        total_awards: Total awards
+        sector_with_code: Sector
+        channel_of_delivery_code: Channel of delivery code
+        flow_with_code: Flow
+        finance_with_code: Finance type
+        aid_type_with_code: Aid type
+        collaboration_type: Collaboration type
+        policy_marker_gender: Gender - policy marker
+        policy_marker_climate_change_adaptation: Climate Change - Adaptation policy marker
+        policy_marker_climate_change_mitigation: Climate Change - Mitigation policy marker
+        policy_marker_biodiversity: Biodiversity policy marker
+        policy_marker_desertification: Desertification policy marker
+        policy_marker_disability: Disability policy marker
+        policy_marker_disaster_risk_reduction: Disaster Risk Reduction policy marker
+        fstc_applies: Disaster Risk Reduction policy marker
+        policy_marker_nutrition: Nutrition policy marker
+        implementing_organisations: Implementing organisations
+        tied_status_with_code: Tied status
+        originating_report_id: Originating report identifier
+        source_fund_code: Fund code
+        call_present: Call present?
+        transparency_identifier: IATI identifier
+        parent_id: Parent identifier
+        publish_to_iati: Include in IATI XML export?
+        sector_category: Sector category
+        previous_identifier: Previous IATI identifier
+        geography: Recipient geography
+        extending_organisation_id: Extending organisation identifier
+        form_state: Form state
+        aid_type: Aid type
+        sector: Sector
+        organisation_id: Organisation identifier
     errors:
       models:
         activity:
