Update the report comment view
This updates the comment reports view to
show more detail about a comment, including
the type. Because adjustment and refund
comments can't be edited, I've added two
simple policies that just return `false` for the
`update?` action. This seems simpler than
adding a bunch of conditionals, and also
allows us to build on these policies if
necessary further down the line.

--- a/config/locales/models/comment.en.yml
+++ b/config/locales/models/comment.en.yml
@@ -28,6 +28,7 @@ en:
         activity_roda_identifier: Activity RODA Identifier
         date: Date
         comment: Comment
+        type: Type
   action:
     comment:
       create:
