--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -233,3 +233,4 @@ en:
             deadline:
               not_in_past: The deadline must be a date in the future
               between: Date must be between %{min} years ago and %{max} years in the future
+          unapproved_reports_html: "Cannot create new report: There is an unapproved report for the same delivery partner organisation and fund. Previous reports must be approved before creating a new report."
