Update Spending breakdown export
Now that we have a class that can fetch a column of delivery partner
organisations for an activity the Spending breakdown export service can
user it and the ActivityAttributesColumns classes to generate the file.

Added some coverage around the behaviour when there is no financial
data.

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -440,7 +440,7 @@ en:
         transparency_identifier: IATI identifier
         beis_identifier: Original BEIS tracker identifier
         level: Activity level
-        delivery_partner_identifier: Delivery Partner Identifier
+        delivery_partner_identifier: Delivery partner identifier
         recipient_region: Recipient region
         recipient_country: Recipient country
         intended_beneficiaries: Intended beneficiaries
