Fix: Free standing technical cooperation in report
The ActivityCsvPresenter was not rendering this in a useful way and the
locale was incorrect.

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -484,7 +484,7 @@ en:
         policy_marker_desertification: Desertification policy marker
         policy_marker_disability: Disability policy marker
         policy_marker_disaster_risk_reduction: Disaster Risk Reduction policy marker
-        fstc_applies: Disaster Risk Reduction policy marker
+        fstc_applies: Free standing technical cooperation
         policy_marker_nutrition: Nutrition policy marker
         implementing_organisations: Implementing organisations
         tied_status_with_code: Tied status
