Prevent negative actuals unless importing history
Actuals should never be negative unless the users is BEIS and is
importing historic actuals (which are allowed to be negative as the
effort to fix them is seen to be too great).

Here we apply the validation on `Actual` unless the `importing_history`
validation context is passed. This validation is not used yet, that is
to follow.

--- a/config/locales/models/actual.en.yml
+++ b/config/locales/models/actual.en.yml
@@ -122,6 +122,7 @@ en:
               other_than: Value must not be zero
               blank: Enter an actual spend amount
               not_a_number: Value must be a valid number
+              greater_than: Value cannot be negative
             transaction_type:
               blank: Select a transaction type
             description:
