Allow users to upload actual history data
We do not do anything with it just yet, that will follow.

We use the existing `CsvFileUpload` to do some basic validation of the
file.

--- a/config/locales/views/uploads/actual_histories.en.yml
+++ b/config/locales/views/uploads/actual_histories.en.yml
@@ -25,6 +25,19 @@ en:
     uploads:
       actual_histories:
         new_upload: Upload actual history data
+        upload:
+          button: Upload and continue
+        success: Success
+        missing_or_invalid: Actual history data file is missing or invalid
   breadcrumb:
     uploads:
       actual_histories: Upload actual history
+  form:
+    label:
+      uploads:
+        actual_histories:
+          csv_file: Provide actual history data file
+    hint:
+      uploads:
+        actual_histories:
+          csv_file: Select the file that contains the actual history data for this report.
