Handle missing actual history file upload
Previously we bundle an invalid file along with a missing file.

Here I split those two conditions out to help users understand their
situation better.

--- a/config/locales/views/uploads/actual_histories.en.yml
+++ b/config/locales/views/uploads/actual_histories.en.yml
@@ -27,8 +27,9 @@ en:
         new_upload: Upload actual history data
         upload:
           button: Upload and continue
-        success: Success
-        missing_or_invalid: Actual history data file is missing or invalid
+        success: Actual history uploaded successfully
+        invalid: Actual history data file is invalid
+        missing: You must provide an actual history data file
   breadcrumb:
     uploads:
       actual_histories: Upload actual history
