User can import actual history
Here we bring the importer and UI together.

BEIS users can upload a csv file of actual spend history into a report
to complete the history of an Activity.

--- a/config/locales/views/uploads/actual_histories.en.yml
+++ b/config/locales/views/uploads/actual_histories.en.yml
@@ -28,6 +28,7 @@ en:
         upload:
           button: Upload and continue
         success: Actual history uploaded successfully
+        failed: Actual history upload failed
         invalid: Actual history data file is invalid
         missing: You must provide an actual history data file
   breadcrumb:
