Show unknown country codes
We have had a lot of churn in the country codes in the data set.

Whilst we already show the user when there is an unknown country code we
do not tell them what the code is. This information is very useful in
'debugging' the data and deciding on a course of action.

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -332,7 +332,7 @@ en:
         html: To create a new Activity, first choose the %{organisations_link} you wish to create the Activity under
       organisation: Organisation
     activity:
-      unknown_country: Unknown country code
+      unknown_country: Unknown country code (%{code})
       benefitting_region_check_box: Select or deselect all countries in %{region}
       budgets: Budgets
       button:
