History actual spend import cannot be in the past
The actual history import should not be used to import current actual
spend.

Here 'current' means:

> the financial quarter before the one one you are physically in

For example:

- on the 23rd of November 2021
- you are physically in FQ3 2021-2022
- RODA will have last collected spend for FQ2 2021-2022
- the current financial quarter is FQ2 2021-2022
- we would not consider spend in FQ2 2021-2022 to be history

--- a/config/locales/views/uploads/actual_histories.en.yml
+++ b/config/locales/views/uploads/actual_histories.en.yml
@@ -14,9 +14,9 @@ en:
           body_html:
             <p class="govuk-body">Actual data history differs from regular reporting data in the following ways:</p>
             <ul class="govuk-list govuk-list--bullet">
+              <li>Historic actuals must be in a past financial quarter</li>
               <li>Historic actuals can be negative</li>
-              <li>Historic actuals can be from the current or any past financial quarter</li>
-              </ul>
+            </ul>
           warning_html:
             <div class="govuk-inset-text">
               Uploading actual history data will append to any values already provided in this report.
