--- a/config/locales/views/uploads/actual_histories.en.yml
+++ b/config/locales/views/uploads/actual_histories.en.yml
@@ -9,7 +9,7 @@ en:
         actuals_tab:
           body_html:
             <p class="govuk-body">Historic actuals can be uploaded into this report.</p>
-            <div class="govuk-inset-text">It is recommended that the actual data history is the only data uploaded in this report.</div>
+            <div class="govuk-inset-text">When uploading actual data history, it is recommended to use a new, empty report that contains only the actual data history</div>
         new:
           body_html:
             <p class="govuk-body">Actual data history differs from regular reporting data in the following ways:</p>
