DP adds and removes OrgParticipations for implementing orgs thru UI
Rather than adding / editing individual (often duplicated)
`ImplementingOrganisation` entities, a DP now adds or
removes associations to Organisations using the new the
'join'entity `OrgParticipation`.

We show a dropdown list of Organisations of the following
organisation types:

[15 21 24 71 80 90]

These are the distinct `ImplementingOrganisation#organisation_type`
values which have been migrated.

There are 516 of these organisations (`Organisation.integrating.count`)
which makes for a long list, but acceptable for a first cut,
I think?

In a later PR we will drop the `implementing_organisations`
table, once we are sure we've migrated all of its rows to
the new `org_participations` table.

--- a/config/locales/models/implementing_organisation.en.yml
+++ b/config/locales/models/implementing_organisation.en.yml
@@ -3,28 +3,16 @@ en:
   action:
     implementing_organisation:
       create:
-        success: Implementing organisation successfully created
-      update:
-        success: Implementing organisation successfully updated
-  activerecord:
-    errors:
-      models:
-        implementing_organisation:
-          attributes:
-            name:
-              blank: Implementing organisation name can't be blank
-            organisation_type:
-              blank: Implementing organisation sector can't be blank
-              inclusion: Implementing organisation sector must be included in the IATI codelist
+        success: Implementing organisation successfully added to activity
+      delete:
+        button: Remove
+        success: Implementing organisation successfully removed
+
   form:
     label:
-      implementing_organisation:
-        name: Organisation name
-        organisation_type: Organisation type
-        reference: International Aid Transparency Initiative (IATI) reference (optional)
-    hint:
-      implementing_organisation:
-        reference_html: <a href="http://org-id.guide/" target="_blank" class="govuk-link">Organisation references can be found using this service (Opens in new window)</a>
+      implementing_organisation: Choose organisation from list
+    guidance_html: Please contact the RODA team at %{link} if you need to add to this list of implementing organisations.
+
   table:
     header:
       implementing_organisation:
