Use Partner organisation in all remaining locales
These replacements have not made any specs fail. We tend to use locale
keys in specs rather than their values, so this is probably okay.

--- a/config/locales/models/outgoing_transfer.en.yml
+++ b/config/locales/models/outgoing_transfer.en.yml
@@ -12,7 +12,7 @@ en:
       edit: Edit outgoing transfer
       confirm: Are these transfer details correct?
   intro:
-    outgoing_transfer: Transfer funds to another delivery partner activity
+    outgoing_transfer: Transfer funds to another partner organisation activity
   action:
     outgoing_transfer:
       create:
