Replace `delivery_partner_name` in locale strings
Replace `delivery_partner_name` with `partner_organisation_name`.

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -15,7 +15,7 @@ en:
     activity:
       edit: Activity %{name} - Publish to IATI
       show: Activity %{name}
-      index: Activities for %{delivery_partner_name}
+      index: Activities for %{partner_organisation_name}
       details: Activity %{name} - Details
       other_funding: Activity %{name} - Other funding
       financials: Activity %{name} - Financials
