Rename `delivery_partner_organisation` key

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -471,7 +471,7 @@ en:
         organisation_id: Organisation identifier
         tied_status: Tied status
         organisation: Organisation
-        delivery_partner_organisation: Partner organisation
+        partner_organisation: Partner organisation
     errors:
       models:
         activity:
