Make partner organisation identifier optional for Level B
This updates the validation of an activity's `partner_organisation_identifier` as
triggered on the `:idenitifer_step` so that `presence: true` is only required when the
activity is a project (i.e. Level C or D)

This also updates the step-by-step form for adding an individual Level B activity
so that the heading indicates that the field is optional, and updates a test that was
looking at this heading on Level C/D activities to use a translation file, rather than
hard-coded (English) text

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -61,6 +61,7 @@ en:
           recipient_region: Region
           recipient_country: Country
         partner_organisation_identifier: Enter your unique identifier
+        partner_organisation_identifier_level_b: Enter your unique identifier (optional)
         intended_beneficiaries: What are the intended beneficiaries?
         objectives: Aims/Objectives of the activity
         oda_eligibility:
